docs: update README and CHANGELOG for 0.6.0-jdk25 and Rust 0.1.0
- install snippets advertise 0.6.0-jdk25; runtime flags drop
  --enable-preview; JDK 25/26 compatibility note
- explain compile-scope Z3 (runs at engine construction) for both
  languages; Rust maturity In progress -> Production
- CHANGELOG restructured into Java/Rust sections with the preview drop,
  CompilationMode, relicense, and conformance work; version scheme is
  now {semver}-jdk{N}